# pylogutil

./: README.md  README.rst  conf.py  pyproject.toml  pytest.ini  setup.cfg
_build/doctrees/: README.doctree  environment.pickle  index.doctree
_build/html/: .buildinfo  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/_sources/: README.rst.txt  index.rst.txt
docs/source/: conf.py  index.rst  modules.rst  pylogutil.__main__.rst  pylogutil._linefiltering._colorgen.rst  pylogutil._linefiltering._regexfilterbase.rst  pylogutil._linefiltering.rst  pylogutil._linefilters.rst  pylogutil._misc.rst  pylogutil.rst  pylogutil.util.rst
src/pylogutil/: __init__.py  __main__.py  _linefilters.py  _misc.py  util.py
src/pylogutil/_linefiltering/: __init__.py  _colorgen.py  _regexfilterbase.py
test/: __init__.py
test/pylogutil/: test_util.py
