[metadata]
name = pylogutil
version = 0.0.3
description = basic log filter in python
long_description = file: README.rst
url = https://github.com/monroe-dylan-m/pylogutil
author = Dylan Monroe
author_email = monroe.dylan.m@gmail.com
license = GNU LGPL 3
license_files = LICENSE.txt
project_urls =
    Source = https://github.com/monroe-dylan-m/pylogutil
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
    Topic :: System :: Logging
    Topic :: Text Processing :: Filters
    Topic :: Utilities

[options]
package_dir =
    = src
packages = pylogutil
install_requires =
    click
zip_safe = true

[options.entry_points]
console_scripts =
    util.py = pylogutil.util:main